# numeric

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCXXRestrict.cmake  FindGPTL.cmake  FindHomebrewOpenMP.cmake  WriteCXXSource.cmake  findHomebrewOpenMP.cmake  setIfUnset.cmake
src/: CMakeLists.txt
src/alt-simd/: Aligned.h  AlignedAllocator.h  AlignedSIMD.h  Array.h  CMakeLists.txt  CompareNumbers.h  ComplexVector.h  ComplexVectorKernels.h  OpenMP.cpp  OpenMP.h  README  System.h  utils.h
src/alt-simd/simd/: Complex.h  Real.h
src/flexible_array/: CommonTypes.h  Makefile  README  Timer.h  VectorOfArrays.h  main.cpp
src/numeric/: Aligned.h  AlignedAllocator.cpp  AlignedAllocator.h  AlignedSIMD.h  Array.h  Assert.h  Backtrace.cpp  Backtrace.h  CArrayRef.h  CMakeLists.txt  CommonTypes.h  CompareNumbers.h  ComplexArrayVector.h  ComplexVector.h  ComplexVectorKernels.h  Constants.h  GptlWrappers.cpp  GptlWrappers.h  Legendre.cpp  Legendre.h  Matrix.h  OpenMP.cpp  Random.cpp  Random.h  RandomSampler.h  RealSphericalHarmonics.cpp  RealSphericalHarmonics.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Stacktrace.cpp  Stacktrace.h  Timer.h  VectorOfVectors.h  VectorOfVectors.h.bck  VectorRef.h
src/numeric/simd/: Complex.h  Real.h
src/omp-simd/: Aligned.h  AlignedSIMD.h  CMakeLists.txt  CommonTypes.h  ComplexVector.h  README  System.cpp  System.h  Timer.h  VectorComplexN.h  run_test.sh
src/openmp-simd/: ComplexVector.h  Makefile  main.cpp
test/: CMakeLists.txt
test/alt-simd/complex/: main.cpp  main.h
test/basic/: main.cpp
test/compare_numbers/: main.cpp
test/legendre/: main.cpp  main.h
test/misc_simd/: main.cpp
test/old-omp-simd/: main.cpp
test/omp-simd/complex/: main.cpp  main.h
test/omp-simd/complexN/: main.cpp  main.h
test/omp-simd/complex_array/: main.cpp  main.h
test/omp-simd/real/: main.cpp  main.h
test/real_spherical_harmonics/: main.cpp  main.h
test/spherical_harmonics/: main.cpp  main.h
test/vector_of_vectors/: main.cpp
